2007-07-01  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/Makefile.am (EXTRA_DIST): Set this so we can pass
	distcheck.

2007-07-01  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaControl.cpp/h,
	compzilla/src/compzillaWindow.cpp/h: Remove OVERLAY_INPUT_REGION
	code, which tries to create an nsDisplayList for the active
	Xwindow's visible regions, and set the overlay's input mask to
	allow input to flow through to the underlying window.

2007-07-01  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/Makefile.am (skin_DATA): Remove desktop.html.
	(libcompzilla_la_LDFLAGS): Add -Wl,-Bsymbolic, which extensions
	build with inside the moz tree.
	(libcompzilla_la_LIBADD): Add NSPR_LIBS and -lxpcomglue_s. We need
	a better solution to this since Ubuntu/Debian? doesn't include
	libxpcomglue_s in it's devel pkg.

	* compzilla/chrome/skin/desktop.html: Remove this, the desktop
	background is now specified using CSS.

2007-07-01  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/components/compzillaWindowManager.js: Remove this,
	it's no longer used since we moved to the event/observer model for
	native->js comm.

	* compzilla/src/compzillaEventManager.cpp,
	compzilla/src/compzillaWindowEvents.cpp,
	compzilla/src/compzillaEventManager.h,
	compzilla/src/compzillaWindowEvents.h,
	compzilla/public/compzillaIWindowEvents.idl: Delete these old
	files held over from the event-based attempt, before we switched
	to using observers.

2007-06-27  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/content/atoms.js (Atoms): Intern
	_NET_VIRTUAL_ROOTS.

	Fixup some JS var bugs.

2007-06-27  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaControl.cpp (ConvertNsRegion): Add.
	(SetOverlayInput): Add.
	(SetRootWindowProperty): Call SetOverlayInput in response to
	_NET_ACTIVE_WINDOW changes, if OVERLAY_INPUT_REGION is defined.
	(AddWindow): Don't call MapWindow from here.
